--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
     "prettier": "^2.2.1",
     "prettier-plugin-go-template": "0.0.10",
     "tailwindcss": "^2.2.16"
-  }
+  },
+  "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
 }
